Made edits to CE5, created CE6

--- a/ce5.ipynb
+++ b/ce5.ipynb
@@ -31,6 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Freeman example\n",
     "def open_shapefile(x):\n",
     "    return gpd.read_file(x)\n",
     "open_shapefile(r\"C:\\Users\\asanders\\Documents\\usa_shapefile\\tl_2025_us_state.shp\")"
@@ -43,6 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Freeman example\n",
     "def open_shapeful_al(x):\n",
     "    full_fil = gpd.read_file(x)\n",
     "    return full_fil[full_fil['STUSPS'] == 'AL']\n",
@@ -56,14 +58,41 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "alabama = gpd.sjoin(pop,usa)\n",
-    "alabama.head()"
+    "spatialjoin = gpd.sjoin(pop,usa)\n",
+    "spatialjoin.head()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "4d8d92f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'spatialjoin' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m     al = gpd.clip(x, mask=spatialjoin)\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m al[al[\u001b[33m'\u001b[39m\u001b[33mSTUSPS\u001b[39m\u001b[33m'\u001b[39m] == \u001b[33m'\u001b[39m\u001b[33mAL\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43malabama\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mC:\u001b[39;49m\u001b[33;43m\\\u001b[39;49m\u001b[33;43mUsers\u001b[39;49m\u001b[33;43m\\\u001b[39;49m\u001b[33;43masanders\u001b[39;49m\u001b[33;43m\\\u001b[39;49m\u001b[33;43mDocuments\u001b[39;49m\u001b[33;43m\\\u001b[39;49m\u001b[33;43musa_shapefile\u001b[39;49m\u001b[33;43m\\\u001b[39;49m\u001b[33;43mtl_2025_us_state.shp\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36malabama\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34malabama\u001b[39m(x):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     al = gpd.clip(x, mask=\u001b[43mspatialjoin\u001b[49m)\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m al[al[\u001b[33m'\u001b[39m\u001b[33mSTUSPS\u001b[39m\u001b[33m'\u001b[39m] == \u001b[33m'\u001b[39m\u001b[33mAL\u001b[39m\u001b[33m'\u001b[39m]\n",
+      "\u001b[31mNameError\u001b[39m: name 'spatialjoin' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "# mess around w this later\n",
+    "def alabama(x):\n",
+    "    al = gpd.clip(x, mask=)\n",
+    "    return al[al['STUSPS'] == 'AL']\n",
+    "alabama(r\"C:\\Users\\asanders\\Documents\\usa_shapefile\\tl_2025_us_state.shp\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18a52a66",
    "metadata": {},
    "outputs": [],
    "source": []
