Final code for the assignment

--- a/ce5.ipynb
+++ b/ce5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 139,
    "id": "904f4729",
    "metadata": {},
    "outputs": [],
@@ -13,94 +13,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 140,
    "id": "3b026d92",
    "metadata": {},
    "outputs": [],
    "source": [
-    "usa = gpd.read_file(r\"C:\\Users\\asanders\\Documents\\usa_shapefile\\tl_2025_us_state.shp\")\n",
-    "pop = gpd.read_file(r\"C:\\Users\\asanders\\Documents\\populated_places\\ne_10m_populated_places.shp\")\n",
+    "usa = gpd.read_file(r\"C:\\Users\\andre\\OneDrive\\Documents\\schoolstuff\\AES408\\states\\tl_2025_us_state.shp\")\n",
+    "pop = gpd.read_file(r\"C:\\Users\\andre\\OneDrive\\Documents\\schoolstuff\\AES408\\populated_places\\ne_10m_populated_places.shp\")\n",
     "usa = usa.to_crs(\"EPSG:5070\")\n",
     "pop = pop.to_crs(\"EPSG:5070\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e74b1461",
+   "execution_count": 141,
+   "id": "c1e9c605",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Freeman example\n",
-    "def open_shapefile(x):\n",
-    "    return gpd.read_file(x)\n",
-    "open_shapefile(r\"C:\\Users\\asanders\\Documents\\usa_shapefile\\tl_2025_us_state.shp\")"
+    "def pop_places(usa,pop):\n",
+    "    result = gpd.sjoin(usa,pop,predicate='within')\n",
+    "    alabama = usa[usa['NAME'] == 'Alabama']\n",
+    "    return result"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "41381c04",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Freeman example\n",
-    "def open_shapeful_al(x):\n",
-    "    full_fil = gpd.read_file(x)\n",
-    "    return full_fil[full_fil['STUSPS'] == 'AL']\n",
-    "open_shapeful_al(r\"C:\\Users\\asanders\\Documents\\usa_shapefile\\tl_2025_us_state.shp\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6dbd24ed",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "spatialjoin = gpd.sjoin(pop,usa)\n",
-    "spatialjoin.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4d8d92f7",
+   "execution_count": 142,
+   "id": "ac113f92",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'spatialjoin' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 4\u001b[39m\n\u001b[32m      2\u001b[39m     al = gpd.clip(x, mask=spatialjoin)\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m al[al[\u001b[33m'\u001b[39m\u001b[33mSTUSPS\u001b[39m\u001b[33m'\u001b[39m] == \u001b[33m'\u001b[39m\u001b[33mAL\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m----> \u001b[39m\u001b[32m4\u001b[39m \u001b[43malabama\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43mr\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mC:\u001b[39;49m\u001b[33;43m\\\u001b[39;49m\u001b[33;43mUsers\u001b[39;49m\u001b[33;43m\\\u001b[39;49m\u001b[33;43masanders\u001b[39;49m\u001b[33;43m\\\u001b[39;49m\u001b[33;43mDocuments\u001b[39;49m\u001b[33;43m\\\u001b[39;49m\u001b[33;43musa_shapefile\u001b[39;49m\u001b[33;43m\\\u001b[39;49m\u001b[33;43mtl_2025_us_state.shp\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[14]\u001b[39m\u001b[32m, line 2\u001b[39m, in \u001b[36malabama\u001b[39m\u001b[34m(x)\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34malabama\u001b[39m(x):\n\u001b[32m----> \u001b[39m\u001b[32m2\u001b[39m     al = gpd.clip(x, mask=\u001b[43mspatialjoin\u001b[49m)\n\u001b[32m      3\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m al[al[\u001b[33m'\u001b[39m\u001b[33mSTUSPS\u001b[39m\u001b[33m'\u001b[39m] == \u001b[33m'\u001b[39m\u001b[33mAL\u001b[39m\u001b[33m'\u001b[39m]\n",
-      "\u001b[31mNameError\u001b[39m: name 'spatialjoin' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "692         Auburn\n",
+      "693       Florence\n",
+      "1981        Dothan\n",
+      "1982    Tuscaloosa\n",
+      "1983       Gadsden\n",
+      "1984    Enterprise\n",
+      "1985         Selma\n",
+      "4899    Birmingham\n",
+      "4900        Mobile\n",
+      "5409    Huntsville\n",
+      "6239    Montgomery\n",
+      "Name: NAME_left, dtype: str\n"
      ]
     }
    ],
    "source": [
-    "# mess around w this later\n",
-    "def alabama(x):\n",
-    "    al = gpd.clip(x, mask=)\n",
-    "    return al[al['STUSPS'] == 'AL']\n",
-    "alabama(r\"C:\\Users\\asanders\\Documents\\usa_shapefile\\tl_2025_us_state.shp\")"
+    "alabama_places = pop_places(pop,alabama)\n",
+    "print(alabama_places['NAME_left']) # NAME_left is the column with city names from the spatial join result"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18a52a66",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "default",
    "language": "python",
    "name": "python3"
   },
